i fixed overflow-x-auto and i add shrink-0 in div and all

--- a/src/output.css
+++ b/src/output.css
@@ -231,11 +231,17 @@
   .h-\[5px\] {
     height: 5px;
   }
+  .h-\[30px\] {
+    height: 30px;
+  }
   .h-\[40px\] {
     height: 40px;
   }
   .h-\[50px\] {
     height: 50px;
+  }
+  .h-\[56px\] {
+    height: 56px;
   }
   .h-\[480px\] {
     height: 480px;
@@ -258,6 +264,9 @@
   .w-\[90\%\] {
     width: 90%;
   }
+  .w-\[90\] {
+    width: 90;
+  }
   .w-\[120px\] {
     width: 120px;
   }
@@ -272,6 +281,9 @@
   }
   .w-\[300px\] {
     width: 300px;
+  }
+  .w-\[320px\] {
+    width: 320px;
   }
   .w-\[377px\] {
     width: 377px;
@@ -381,6 +393,9 @@
   .gap-y-\[50px\] {
     row-gap: 50px;
   }
+  .overflow-x-auto {
+    overflow-x: auto;
+  }
   .rounded-\[8px\] {
     border-radius: 8px;
   }
@@ -395,6 +410,12 @@
   }
   .rounded-\[36px\] {
     border-radius: 36px;
+  }
+  .rounded-\[40px\] {
+    border-radius: 40px;
+  }
+  .rounded-\[100px\] {
+    border-radius: 100px;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -417,11 +438,17 @@
   .bg-\[\#141414\] {
     background-color: #141414;
   }
+  .bg-\[\#191919\] {
+    background-color: #191919;
+  }
   .bg-\[black\] {
     background-color: black;
   }
   .bg-black {
     background-color: var(--color-black);
+  }
+  .p-\[4\] {
+    padding: 4;
   }
   .p-\[5px\] {
     padding: 5px;
@@ -715,6 +742,11 @@
   .lg\:inline {
     @media (width >= 64rem) {
       display: inline;
+    }
+  }
+  .lg\:h-\[56px\] {
+    @media (width >= 64rem) {
+      height: 56px;
     }
   }
   .lg\:w-\[140px\] {
